--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "env": {
       "node": false
     },
+    "globals":{
+      "common": true,
+      "store": true
+    },
     "extends": [
       "plugin:vue/recommended",
       "@vue/standard"
