--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "vant": "^3.0.0-rc.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -31,6 +32,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -48,9 +50,10 @@
     "env": {
       "node": false
     },
-    "globals":{
+    "globals": {
       "common": true,
-      "store": true
+      "store": true,
+      "process": true
     },
     "extends": [
       "plugin:vue/recommended",
